// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|/m-address/m-address-editor default 1`] = `
<div>
  <div>
    <div
      class="m-address-editor"
    >
      <div
        class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Numéro civique
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Unité
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Rue
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Ville
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-dropdown"
        style="width: 100%; max-width: 288px;"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="listboxId-fakeId"
          class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          role="combobox"
        >
          <div
            class="m-input-style__main"
            style="width: 100%;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mDropdown-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <!---->
                   
                  <input
                    aria-activedescendant=""
                    aria-describedby="fakeId"
                    aria-haspopup="listbox"
                    class="m-dropdown__input"
                    id="mDropdown-fakeId"
                    readonly="readonly"
                    role="button"
                    type="text"
                  />
                    
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-dropdown__arrow"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Ouvrir la liste déroulante"
                      class="m-icon m-dropdown__arrow__icon"
                      height="12px"
                      width="12px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <div
            class="m-popper m-popup"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <div
          class="m-validation-message m-dropdown__validation-message"
          id="fakeId"
          slot="validation"
        >
          <!---->
           
          <!---->
        </div>
      </div>
      <br />
       
      <!---->
       
      <div
        class="m-input-style m-textfield m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Code Postal
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
    </div>
  </div>
   
  <div
    style="border-top: 1px solid #000; margin-top: 50px;"
  >
    <div>
      Current address valid : true
    </div>
     
    <div>
      Address from editor : {
  "buildingNumber": "2325",
  "city": "Québec",
  "country": {
    "country": "Canada",
    "countryIso2": "CA"
  },
  "province": {
    "province": "Québec",
    "provinceCode": "QC"
  },
  "street": "Rue de l'Université",
  "postalCode": "G1V 0A6",
  "subBuilding": ""
}
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|/m-address/m-address-editor empty address 1`] = `
<div>
  <div>
    <div
      class="m-address-editor"
    >
      <div
        class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Numéro civique
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Unité
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Rue
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Ville
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
       
      <div
        class="m-dropdown"
        style="width: 100%; max-width: 288px;"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="listboxId-fakeId"
          class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          role="combobox"
        >
          <div
            class="m-input-style__main"
            style="width: 100%;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mDropdown-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <!---->
                   
                  <input
                    aria-activedescendant=""
                    aria-describedby="fakeId"
                    aria-haspopup="listbox"
                    class="m-dropdown__input"
                    id="mDropdown-fakeId"
                    readonly="readonly"
                    role="button"
                    type="text"
                  />
                    
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-dropdown__arrow"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Ouvrir la liste déroulante"
                      class="m-icon m-dropdown__arrow__icon"
                      height="12px"
                      width="12px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <div
            class="m-popper m-popup"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <div
          class="m-validation-message m-dropdown__validation-message"
          id="fakeId"
          slot="validation"
        >
          <!---->
           
          <!---->
        </div>
      </div>
      <br />
       
      <!---->
       
      <div
        class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Code Postal
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
      <br />
    </div>
  </div>
   
  <div
    style="border-top: 1px solid #000; margin-top: 50px;"
  >
    Address from editor : {
  "buildingNumber": "",
  "city": "",
  "country": {
    "country": "Canada",
    "countryIso2": "CA"
  },
  "street": "",
  "postalCode": "",
  "subBuilding": ""
}
  </div>
</div>
`;
